# Explicit-Text-Removal

./: README.md  pyproject.toml
hopton_project/: main.py  make_lexicon.py
tests/: test_main.py  test_make_lexicon.py
